# funny_things

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
backend/: Cargo.toml
backend/src/: main.rs
src/: index.tsx  main.tsx  style.css
src/components/: Icons.tsx  MovingRainbowBox.tsx
